--- a/Resources/Private/Templates/Tag/List.html
+++ b/Resources/Private/Templates/Tag/List.html
@@ -6,11 +6,11 @@
 <f:layout name="Default"/>
 
 <f:section name="Main">
-<div class="tagCloud">
-	<f:for each="{tags}" as="tag">
-		<f:if condition="{tag.count}">
-			<f:link.action controller="tag" action="show" additionalParams="{pageUid:'{tag.uid}'}" pageUid="{settings.storageTagListPid}" style='font-size:{tag.count}px;'>{tag.title}</f:link.action>
-		</f:if>
-	</f:for>
-</div>
+	<div class="tagCloud">
+		<f:for each="{tags}" as="tag">
+			<f:if condition="{tag.count}">
+				<f:link.page  additionalParams="{tagUid:'{tag.uid}', tagTitle:'{tag.Title}'}" pageUid="{settings.filterPid}" style='font-size:{tag.count}px;'>{tag.title}</f:link.page>
+			</f:if>
+		</f:for>
+	</div>
 </f:section>
