deleted blog post

--- a/Resources/Private/Templates/Blog/Details.html
+++ b/Resources/Private/Templates/Blog/Details.html
@@ -1,6 +1,6 @@
 <div class="postInfo">
 		Veröffentlicht:
-	<f:format.date format="d.m.Y">@{pages.crdate}</f:format.date>
+	<f:format.date format="d.m.Y">@{pages.starttime}</f:format.date>
 		<f:if condition="{categories}">
 			<div class="blogCategories">
 				Kategorien :
